--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,1 +1,10 @@
-wwwooo
+.row
+  %h3.blue Overview
+  .col-xs-12
+    %p
+      %strong When:
+      March 29th
+      %br
+      %strong Where:
+      Olympia High School Commons
+    %a{href: 'https://docs.google.com/forms/d/12qBk69lXB871AU0fNA8bGDJpC3TN2tDrwVqSihX6CT8'} Register
