--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -7,4 +7,58 @@
       %br
       %strong Where:
       Olympia High School Commons
-    %a{href: 'https://docs.google.com/forms/d/12qBk69lXB871AU0fNA8bGDJpC3TN2tDrwVqSihX6CT8'} Register
+      %br
+      %strong What: 
+      This competition is to be the first programming competition held at Olympia High School as well as any other high school in the district. It is being organized and supervised by the co-presidents of the O.H.S. Programming Club. We will be basing the competition off of bi-annual competitions that are held by the University of Washington. The competition itself will take about 3 hrs and at the end awards will be given out to the top 3 teams. Rules and a schedual can be found below.  
+.row
+  %h3.blue Rules
+  .col-xs-12
+    %ul
+      %li Competition will be held in groups of 1-3.
+      %li At the beginning of the competition groups will be given a packet of around 10-20 problems.
+      %li Groups will compete for 3 hrs in order to solve as many problems as they can.
+      %li Each problem solved is worth 10 points.
+      %li Each time a problem is answered incorrectly 1 point will be subtracted from overall score.
+      %li You are allowed to bring books or printed code, but you will not have access to the internet.
+      %li Final placement will be decided by overall score and speed of finishing problems.
+.row 
+  %h3.blue Requirements
+  .col-xs-12
+    %ul 
+      %li A laptop or Desktop that you can bring and compile code on. (If you do not have a computer to bring please email us so we can help you out)
+      %li Knowledge of any programming language. As long as you can run it on your computer you can use it.
+
+.row
+  %h3.blue Schedual
+  .col-xs-12
+    %ul
+      %li 11:00-11:30: Check In
+      %li 11:30-12:00: Rules and Practice Round
+      %li 12:00-3:00:  Competition
+      %li 3:00-3:30:   Awards
+.row
+  %h3.blue Registration
+  .col-xs-12
+    %p Please use this handy google doc to register for the competition. After recieving your submission we will respond within 1 week with confirmation. If you do not recieve a confirmation within 1 week please send us an email with your team name informing us of the situation. When determining skill level, check advanced if you have taken a full year programming course or if you have been to more than one programming competition.
+    %a{href:"https://docs.google.com/forms/d/12qBk69lXB871AU0fNA8bGDJpC3TN2tDrwVqSihX6CT8"} Register Here
+.row
+  %h3.blue Questions & Contact Information
+  .col-xs-12
+    %strong Q: Does this competition cost?
+    %br
+    %strong A: No it does not. Although donations will be accepted to help fund the programming club and future competitions.
+    %br
+    %br
+    %strong Q: How difficult will the problems be?
+    %br
+    %strong A: The problems will range from basic programming practices to more difficult problems such as a modified napsack problem.
+    %br
+    %br
+    %strong Q: Why is this website so ugly?
+    %br
+    %strong A: We are programmers, not designers.
+    %br
+    %br
+    %p If you have anymore questions please email us at olyhighprogramming@gmail.com
+    %br
+
