--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -9,16 +9,17 @@
       Olympia High School Commons
       %br
       %strong What: 
-      This competition is to be the first programming competition held at Olympia High School as well as any other high school in the district. It is being organized and supervised by the co-presidents of the O.H.S. Programming Club. We will be basing the competition off of bi-annual competitions that are held by the University of Washington. The competition itself will take about 3 hrs and at the end awards will be given out to the top 3 teams. Rules and a schedule can be found below.  
+      This competition is to be the first programming competition held at Olympia High School as well as any other high school in the district. It is being organized and supervised by the co-presidents of the O.H.S. Programming Club. We will be basing the competition off of bi-annual competitions that are held by the University of Washington. The competition itself will take about 3 hours and at the end awards will be given out to the top 3 teams. Rules and a schedule can be found below.  
 .row
   %h3.blue Rules
   .col-xs-12
     %ul
       %li Competition will be held in groups of 1-3.
       %li At the beginning of the competition groups will be given a packet of around 10-20 problems.
-      %li Groups will compete for 3 hrs in order to solve as many problems as they can.
+      %li Groups will compete for 3 hours in order to solve as many problems as they can.
       %li Each problem solved is worth 10 points.
       %li Each time a problem is answered incorrectly 1 point will be subtracted from overall score.
+      %li Each team is allowed one computer (one monitor, mouse and keyboard).
       %li You are allowed to bring the downloaded API for your language of choice, but you will not have access to the internet.
       %li Final placement will be decided by overall score and speed of finishing problems.
 .row 
@@ -67,6 +68,6 @@
     %strong A: We are programmers, not designers.
     %br
     %br
-    %p If you have anymore questions please email us at olyhighprogramming@gmail.com
+    %p If you have any more questions please email us at olyhighprogramming@gmail.com
     %br
 
