--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -68,6 +68,6 @@
     %strong A: We are programmers, not designers.
     %br
     %br
-    %p If you have any more questions please email us at olyhighprogramming@gmail.com
+    %p If you have any further questions please email us at olyhighprogramming@gmail.com
     %br
 
