Change header and register buttons

--- a/app/assets/stylesheets/header.css.sass
+++ b/app/assets/stylesheets/header.css.sass
@@ -1,6 +1,13 @@
 .navbar
   background-color: #0C2A46
-  a.navbar-brand
-    color: white
-  h1
-    margin: 0
+  .navbar-header
+    width: 100%
+    position: relative
+    .signup
+      position: absolute
+      right: 0
+      top: 50%
+      margin-top: -22px
+    h1
+      color: white
+      margin: 0
