--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -49,7 +49,7 @@
   %h3.blue Registration
   .col-xs-12
     %p Please use this handy google doc to register for the competition. After receiving your submission we will respond within 1 week with confirmation. If you do not recieve a confirmation within 1 week please send us an email with your team name informing us of the situation. When determining skill level, check advanced if you have taken a full year programming course or if you have been to more than one programming competition.
-    %a{href:"https://docs.google.com/forms/d/12qBk69lXB871AU0fNA8bGDJpC3TN2tDrwVqSihX6CT8"} Register Here
+    %a.btn.btn-primary{href:"https://docs.google.com/forms/d/12qBk69lXB871AU0fNA8bGDJpC3TN2tDrwVqSihX6CT8"} Register Here
 .row
   %h3.blue Questions & Contact Information
   .col-xs-12
