--- a/app/views/application/_header.html.haml
+++ b/app/views/application/_header.html.haml
@@ -1,6 +1,7 @@
 .navbar.navbar-default{role: 'navigation'}
   .container
     .navbar-header
-      %a.navbar-brand{href: root_path}
+      .navbar-brand.clearfix
         %h1
           OHS Programming Competition
+        %a.signup.btn.btn-primary.btn-lg{href: "https://docs.google.com/forms/d/12qBk69lXB871AU0fNA8bGDJpC3TN2tDrwVqSihX6CT8"} Sign Up!
