Add practice section

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -3,7 +3,7 @@
   .col-xs-12
     %p
       %strong When:
-      March 29th
+      Sometime Next Year
       %br
       %strong Where:
       Olympia High School Commons
@@ -17,11 +17,36 @@
       %li Competition will be held in groups of 1-3.
       %li At the beginning of the competition groups will be given a packet of around 10-20 problems.
       %li Groups will compete for 3 hours in order to solve as many problems as they can.
-      %li Each problem solved is worth 10 points.
-      %li Each time a problem is answered incorrectly 1 point will be subtracted from overall score.
+      %li Problems are worth varying points based on difficulty
+      %li Each time a problem is answered incorrectly 1/10th of the problem's value will be subtracted from overall score.
       %li Each team is allowed one computer (one monitor, mouse and keyboard).
       %li You are allowed to bring the downloaded API for your language of choice, but you will not have access to the internet.
       %li Final placement will be decided by overall score and speed of finishing problems.
+.row
+  %h3.blue Practice
+  .col-xs-12
+    %p
+      %strong 2014 Competition:
+    %ul
+      %li
+        %strong
+          %a{href: '/pdfs/CompetitionProblems.pdf'} Problems
+      %li
+        %strong
+          %a{href: '/pdfs/CompetitionData.pdf'} Data Sets
+      %li
+        %strong
+          %a{href: '/pdfs/CompetitionAnswers.pdf'} Answer Key
+    %p
+      %strong Other Competitions:
+    %ul
+      %li
+        %strong
+          %a{href: 'http://www.pscsta.org/p/student-programming-contests.html'} UW Competition
+      %li
+        %strong
+          %a{href: 'http://www.plu.edu/csce/hs-prog-contest/home.php'} PLU Competition
+
 .row 
   %h3.blue Requirements
   .col-xs-12
